# PokerMaster

./: .editorconfig  .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.claude/: settings.local.json
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/com/infocar/pokermaster/: AppNav.kt  DeviceTier.kt  MainActivity.kt  PokerMasterApp.kt
app/src/main/kotlin/com/infocar/pokermaster/di/: AppScope.kt  AppScopeModule.kt  LlmAdvisorModule.kt
app/src/main/kotlin/com/infocar/pokermaster/model/: DefaultModels.kt  Ed25519Verifier.kt  ManifestFetcher.kt  ModelDownloadRepository.kt  ModelDownloadWorker.kt  ModelGateScreen.kt  ModelStore.kt  RangeDownloader.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
app/src/test/kotlin/com/infocar/pokermaster/model/: Ed25519VerifierTest.kt  ModelStoreSha256Test.kt
build-logic/convention/: build.gradle.kts
build-logic/convention/src/main/kotlin/: AndroidApplicationConventionPlugin.kt  AndroidComposeConventionPlugin.kt  AndroidHiltConventionPlugin.kt  AndroidLibraryConventionPlugin.kt  Extensions.kt  JvmLibraryConventionPlugin.kt  KotlinAndroid.kt
core/data/: build.gradle.kts
core/data/schemas/com.infocar.pokermaster.core.data.PokerMasterDatabase/: 2.json  3.json
core/data/src/main/kotlin/com/infocar/pokermaster/core/data/: Migrations.kt  PokerMasterDatabase.kt
core/model/: build.gradle.kts
core/model/src/main/kotlin/com/infocar/pokermaster/core/model/: Action.kt  Card.kt  Declaration.kt  GameMode.kt  GameState.kt  ModelManifest.kt  PlayerState.kt  TableConfig.kt
core/model/src/test/kotlin/com/infocar/pokermaster/core/model/: CardTest.kt  GameStateSerializationTest.kt  ModelManifestSerializationTest.kt
core/ui/: build.gradle.kts  consumer-rules.pro
docs/: BACKLOG.md  HI_LO_QA.md  PLAN_UIUX_GAMIFICATION.md
docs/legal/: ASSET_NOTICES.md  IARC_QUESTIONNAIRE.md  KIPRIS_TRADEMARK_CHECK.md  PRIVACY_POLICY.md  TERMS_OF_USE.md  THIRD_PARTY_NOTICES.md  YOUTH_PROTECTION.md
engine/controller/: build.gradle.kts
engine/controller/src/main/kotlin/com/infocar/pokermaster/engine/controller/: AiDriver.kt  (+4 more)
engine/decision/: build.gradle.kts
engine/llm/: build.gradle.kts  consumer-rules.pro
engine/llm-api/: build.gradle.kts
engine/llm/src/main/cpp/: CMakeLists.txt  pokermaster_llm.cpp
engine/rules/: build.gradle.kts
feature/history/: build.gradle.kts
feature/lobby/: build.gradle.kts  consumer-rules.pro
feature/lobby/src/main/res/values/: strings.xml
feature/onboarding/: build.gradle.kts
feature/onboarding/src/main/res/values/: strings.xml
feature/table/: build.gradle.kts
feature/table/src/main/res/raw/: legal_open_source.txt  legal_privacy.txt  legal_responsible_gaming.txt  legal_terms.txt
feature/table/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
licenses/: APACHE_2.0.txt  AUDIO_KENNEY_CASINO.txt  BOUNCYCASTLE.txt  LLAMA_3.2_COMMUNITY.txt  LLAMA_CPP.txt  PRIVACY_POLICY.md  RESPONSIBLE_GAMING.md  TERMS_OF_SERVICE.md
model-pack/src/main/assets/: MODEL_PLACEHOLDER.txt
(+139 files in other folders)
